name:                preludeFlag
version:             0.1.0.0
synopsis:            why we don't have functionality equivalent to -prelude-is
license:             BSD3
license-file:        LICENSE
author:              Adam Vogt
maintainer:          Adam Vogt
build-type:          Simple
cabal-version:       >=1.10

executable preludeFlag
  main-is:             Main.hs
  hs-source-dirs:      src
  other-extensions:    NoImplicitPrelude
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010
